[tool.poetry]
name = "eufy-clean"
version = "0.1.0"
description = "Python library for controlling Eufy robot vacuums"
authors = ["Thomas Waterfall <thomas.waterfall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
protobuf = "^4.25.3"
paho-mqtt = "^1.6.1"
homeassistant = "^2023.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
